--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4 style="color: #000000; font-size: 18px;"><strong>Master's Thesis</strong></h4>
+              <h4 style="color: #000000; font-size: 18px;"><strong>Double Master's Thesis</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2025 - Present</h5>
               <p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
               <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6;">
