--- a/index.html
+++ b/index.html
@@ -396,19 +396,24 @@
 
           <ul class="portfolio-filters isotope-filters d-flex justify-content-center gap-3" 
               data-aos="fade-up" data-aos-delay="100" 
-              style="list-style: none; padding: 0; display: flex; gap: 15px; margin: 0 0 30px 0;" id="portfolioFilters">
+              style="list-style: none; padding: 0; display: flex; gap: 15px; margin: 0 0 30px 0; margin-left: -20px" id="portfolioFilters">
             <li data-filter="*" 
-                class="filter-active"
+                class="filter-hackathon"
                 style="background-color: #071831; color: white; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid #071831; transition: all 0.3s ease;"
+                onclick="setActiveFilter(this)">
+              All
+            </li>
+            <li data-filter=".filter-hackathon" 
+                style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
                 onclick="setActiveFilter(this)">
               Hackathon
             </li>
-            <li data-filter=".filter-app" 
+            <li data-filter=".filter-university" 
                 style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
                 onclick="setActiveFilter(this)">
               University
             </li>
-            <li data-filter=".filter-product" 
+            <li data-filter=".filter-personal" 
                 style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
                 onclick="setActiveFilter(this)">
               Personal
@@ -439,7 +444,7 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-hackathon">
               <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
@@ -450,17 +455,139 @@
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
                               background: rgba(0, 0, 0, 0.7); color: white; 
-                              display: flex; align-items: center; justify-content: center; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
                               opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
                               border-radius: 15px;" 
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>ENGIHACK&nbsp;&nbsp;2024</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Awards</em></span>
                   </div>
 
                 </div>
               </a>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_tfm.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>MASTER THESIS</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_tfg.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>BACHELOR THESIS</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Industrial Automatization</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_fut.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>FOOT FEATURE EXTRACTION</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_chess.jpeg" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>ROBOTIC CHESS PLAYER</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Robot Operating System (ROS)</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_turtlebot.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>TURTLEBOT MAZE</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
 
           </div><!-- End Portfolio Container -->
 
