--- a/football_file.html
+++ b/football_file.html
@@ -74,25 +74,7 @@
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#">Dropdown 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Deep Dropdown 1</a></li>
-                <li><a href="#">Deep Dropdown 2</a></li>
-                <li><a href="#">Deep Dropdown 3</a></li>
-                <li><a href="#">Deep Dropdown 4</a></li>
-                <li><a href="#">Deep Dropdown 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Dropdown 2</a></li>
-            <li><a href="#">Dropdown 3</a></li>
-            <li><a href="#">Dropdown 4</a></li>
-          </ul>
-        </li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
@@ -110,13 +92,13 @@
 
         <!-- Título de la página con ajuste horizontal -->
         <div style="position: relative; left: -150px;">
-        <h1 class="mb-2 mb-lg-0">ENGIHACK 2024</h1>
+        <h1 class="mb-2 mb-lg-0">MONOCULAR 2D FEATURE EXTRACTION</h1>
         </div>
 
         <nav class="breadcrumbs">
         <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">ENGIHACK 2024</li>
+            <li class="current">MONOCULAR 2D FEATURE EXTRACTION</li>
         </ol>
         </nav>
     </div>
@@ -134,46 +116,54 @@
             <!-- Información del proyecto -->
             <div class="col-lg-8" style="position: relative; top: -25px; left: 5px;">
                 <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-                    <h2><strong>Cold Shower Water Reuse System for Domestic Use</strong></h2>
-                    <p style="font-style: italic; margin-top: -15px;"><strong>Members: Arnau Boix, Javier Covas, Laia Gabarró, Yeray Navarro and me.</strong></p>
+                    <h2><strong>Monocular 2D Football Fields Feature Extraction </strong></h2>
 
                     <!-- Agregar una imagen debajo del texto -->
-                    <img src="assets/img/portfolio/img_equip.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
+                    <img src="assets/img/portfolio/img_football1.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
                     <p style="margin-top: 10px;">
-                        <b>This hackathon took place on October 5th at Museu Nacional de la Ciència i la Tècnica de Catalunya (MNACTEC) in Terrassa, bringing together around 20 teams composed of engineering students from various universities across Catalonia. All teams shared a common goal: finding solutions to some of today’s most pressing challenges, including the climate crisis.</b>
+                        This project focuses on extracting <b>key features from football fields using 2D images</b> captured by the single broadcast camera commonly utilized in televised matches. From this foundation, future stages will aim to accurately <b>localize players on the field</b>, providing the basis for tracking their movements and enabling subsequent gameplay analysis. For the moment, only <b>classical computer vision techniques</b> are considered due to their lower computational complexity, enabling real-time image processing, while the possibility of incorporating AI in the future is not ruled out.
                     </p>
-                    <p>
-                        Our solution, <b>𝐒𝐀𝐑𝐀 (𝐒𝐢𝐬𝐭𝐞𝐦𝐚 𝐀𝐮𝐭𝐨𝐦𝐚̀𝐭𝐢𝐜 𝐝𝐞𝐥 𝐑𝐞𝐚𝐩𝐫𝐨𝐟𝐢𝐭𝐚𝐦𝐞𝐧𝐭 𝐝𝐞 𝐥’𝐀𝐢𝐠𝐮𝐚)</b>, is based on collecting the cold water that flows from the shower while we wait for it to warm up. This clean water is stored in a small tank to be reused for household tasks like watering plants or even for drinking, as it is potable. The system can be installed externally, requiring no wall or floor construction, which enhances its feasibility and helps reduce costs.
-                    </p>
-                    <img src="assets/img/portfolio/img_diposit.png" alt="Descripción de la imagen" style="margin-top: 5px; width: 50%; height: auto; border-radius: 10px; position: relative; left: 175px;">
                     <p style="margin-top: 30px;">
-                        We also had the opportunity to share our project on various media outlets, including the <b><em>TV3</em></b> television program <b><em>TotEsMou3Cat</em></b> and the <b><em>CatalunyaRàdio</em></b> radio program <b><em>RevolucióCatRàdio</em></b></em>, and <b><em>SERCatalunya</em></b>. Personally, I’m very grateful to <b>Xantal Llavina Aguilar</b> and the <b><em>RevolucióCatRàdio</em></b> team for giving me the chance to join their radio program, where I discussed the <em>SARA</em> project alongside <b>Laura Ivern</b>, Deputy Director at Enginyers Industrials de Catalunya. It was an incredible experience that I will never forget.
+                        The following image was extracted from the <b>2024 UEFA European Championship.</b>
                     </p>
-                    <img src="assets/img/portfolio/img_radio2.jpg" alt="Descripción de la imagen" style="margin-top: 5px; width: 75%; height: auto; border-radius: 10px; position: relative; left: 80px;">
-                    <p style="margin-top: 30px;">
-                        You can listen to the full podcast here:
+                    <img src="assets/img/portfolio/img_football2.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 80%; height: auto; border-radius: 0px; position: relative; left: 75px;">
+                    <p style="margin-top: 40px;">
+                        The process begins by focusing on the <b>green regions</b> of the image, typically corresponding to the playing field. Using the HSV (Hue, Saturation, Value) color space, a range of values is defined to isolate green pixels. A mask is then applied to retain only these areas, effectively segmenting the field from other elements.
                     </p>
-                    <!-- Imagen que actúa como enlace al audio -->
-                    <a href="https://www.3cat.cat/3cat/reutilitzar-laigua-freda-de-la-dutxa-guanya-el-1r-premi-a-la-hackato-dengihack/audio/1221567/" target="_blank">
-                        <img src="assets/img/icons/img_audio.jpg" alt="Audio player icon" 
-                            style="width: 50px; height: 50px; cursor: pointer; display: block; margin: 10px auto; position: relative; left: -10px;">
-                    </a>
+                    <p style="margin-top: 0px;">
+                        Once the green areas are isolated, they are converted into a <b>grayscale representation</b>. This simplifies the data by reducing color information, enabling further processing focused on intensity variations.
+                    </p>
+                    <img src="assets/img/portfolio/img_football6.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 80%; height: auto; border-radius: 0px; position: relative; left: 75px;">
+                    <p style="margin-top: 40px;">
+                        To extract structural details, <b>edge detection</b> is applied using the <b>Sobel operator</b>. This method computes the intensity gradient in both horizontal and vertical directions, highlighting lines and transitions within the segmented green areas.
+                    </p>      
+                    <p style="margin-top: 0px;">
+                        After detecting edges, morphological operations such as <b>erosion and dilation</b> are employed. These steps clean up noise and refine the detected lines, ensuring they represent significant features of the field while suppressing minor artifacts.
+                    </p>                
+                    <img src="assets/img/portfolio/img_football4.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 80%; height: auto; border-radius: 0px; position: relative; left: 75px;">
+                    <p style="margin-top: 40px;">
+                        Finally, the refined edges are processed using the <b>Hough Transform</b> to detect straight lines that correspond to the structural elements of the playing field, such as boundaries and key markings. These detected lines are then overlaid onto the original image and highlighted in green. 
+                    </p>                    
+                    <img src="assets/img/portfolio/img_football5.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 80%; height: auto; border-radius: 0px; position: relative; left: 75px;">
+                    <p style="margin-top: 40px;">
+                        This visualization provides a clear representation of the geometric layout of the field, emphasizing its essential structural components for further analysis or tracking applications. In the future, this will facilitate the execution of homographies and the transformation of player positions onto a bird’s-eye view plane.
+                    </p>                     
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
+                <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200" style="position: sticky; top: 100px; z-index: 10;">
                     <h3>Project information</h3>
                     <ul>
-                        <li><strong>Name</strong>: ENGIHACK 2024</li>
-                        <li><strong>Category</strong>: Hackathon</li>
+                        <li><strong>Name</strong>: Monocular 2D Feature Extraction</li>
+                        <li><strong>Topic</strong>: Computer Vision</li>
+                        <li><strong>Tools</strong>: Python</li>
                         <li><strong>Location</strong>: Barcelona (Spain)</li>
-                        <li><strong>Date</strong>: 05 October, 2024</li>
+                        <li><strong>Date</strong>: August, 2024</li>
                     </ul>
                 </div>
             </div>
         </div>
-
 
     </div>
 
