--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>SQL</span> <i class="val">85%</i></span>
+              <span class="skill"><span>SQL</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -220,9 +220,9 @@
 
             
             <div class="progress">
-              <span class="skill"><span>Webots</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Webots</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -263,8 +263,10 @@
             <div class="resume-item">
               <h4 style="color: #000000; font-size: 18px;"><strong>Double Master's Thesis</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2025 - Present</h5>
-              <p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
-              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6;">
+              <!--<p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>-->!
+              <p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b></p>
+              <p style="margin: -3px; margin-left: 1px; color: #555555"><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Currently working on the project 
                   <strong><em>'Belief Sharing and Merging of a Multi-Robot System for Gas Source Localization'</em></strong> 
@@ -283,10 +285,10 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>Master's Degree in Automatic Control and Robotics</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Sep. 2022 - Jan. 2025</h5>
               <p>
-                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b><br>
-                <em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em>
+                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Specialized in <strong>Robotics, Computer Vision, Machine Learning, Navigation, Localization</strong>, and related fields.
                 </li>
@@ -300,10 +302,10 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>Master's Degree in Industrial Engineering</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Sep. 2022 - Jan. 2025</h5>
               <p>
-                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b><br>
-                <em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em>
+                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Specially focused on <strong>Business Administration and Management</strong>, <strong>Industrial Organization</strong>, and addressing advanced technical topics relevant to the degree.
                 </li>
@@ -314,10 +316,10 @@
               <h4 style="color: #000000;"><strong>Bachelor's Degree in Industrial Engineering</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Sep. 2018 - Jun. 2022</h5>
               <p>
-                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b><br>
-                <em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em>
+                <b>Escola Tècnica Superior d'Enginyeria Industrial de Barcelona (ETSEIB)</b>
               </p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Universitat Politècnica de Catalunya (UPC), Barcelona (Spain)</em></p>
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>Provided me with a solid foundation in <strong>Engineering</strong>, covering nearly all areas of the discipline, including: <strong>Mechanical Engineering, Electrical Engineering, Materials Science</strong> and <strong>Thermodynamics</strong>.</li>
                 <li>Gained a solid foundation in <strong>Python</strong>.</li>
               </ul>
@@ -333,7 +335,7 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>AI & Robotics Engineer</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Aug. 2024 - Feb. 2025</h5>
               <p><b>ENKI Technologies S.L. Barcelona (Spain)</b></p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Developed an API for real-time Pest & Disease detection using AI-based Computer Vision techniques, mainly using <strong>Python</strong> programming language and the <strong>FastAPI</strong> framework. Additional libraries, such as <strong>Pandas</strong> and <strong>TensorFlow</strong>, were also employed. The API was deployed to the Cloud using <strong>AWS</strong>.
                 </li>
@@ -347,7 +349,7 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>Junior Consultant</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2022 - Nov. 2022</h5>
               <p><b>InOrbis Analytics S.L. Barcelona (Spain)</b></p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Extracted and analyzed large datasets using advanced <strong>SQL</strong> queries.
                 </li>
@@ -361,8 +363,9 @@
             <div class="resume-item">
               <h4 style="color: #000000; font-size: 18px;"><strong>ENGIHACK 2024</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Oct. 2024</h5>
-              <p><b>Museu Nacional de la Ciència i la Tècnica de Catalunya (MNACTEC), Barcelona (Spain)</b></p>
-              <ul style="color: #555555; font-size: 14px; line-height: 1.6; list-style-type: disc; padding-left: 20px;">
+              <p><b>Museu Nacional de la Ciència i la Tècnica de Catalunya (MNACTEC)</b></p>
+              <p style="margin: -3px; margin-left: 1px; color: #555555"><em>Enginyers Industrials de Catalunya (EIC), Barcelona (Spain)</em></p>
+              <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
                   Winner (1st Prize) among 20 teams during a 12-hour hackathon
                 </li>
@@ -403,11 +406,6 @@
                 onclick="setActiveFilter(this)">
               All
             </li>
-            <li data-filter=".filter-hackathon" 
-                style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
-                onclick="setActiveFilter(this)">
-              Hackathon
-            </li>
             <li data-filter=".filter-university" 
                 style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
                 onclick="setActiveFilter(this)">
@@ -417,6 +415,11 @@
                 style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
                 onclick="setActiveFilter(this)">
               Personal
+            </li>
+            <li data-filter=".filter-hackathon" 
+                style="background-color: #f0f0f0; color: #333; padding: 10px 20px; border-radius: 25px; cursor: pointer; font-size: 1rem; font-weight: 500; border: 2px solid transparent; transition: all 0.3s ease;"
+                onclick="setActiveFilter(this)">
+              Hackathon
             </li>
           </ul>
 
@@ -445,7 +448,7 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-hackathon">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="engihack_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -469,7 +472,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="tfm_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -493,7 +496,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="tfg_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -509,7 +512,7 @@
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>BACHELOR THESIS</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Industrial Automatization</em></span>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Robotics</em></span>
                   </div>
 
                 </div>
@@ -517,7 +520,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="football_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -532,7 +535,7 @@
                               border-radius: 15px;" 
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
-                    <strong>FOOT FEATURE EXTRACTION</strong>
+                    <strong>FOOTBALL FIELD FEATURE EXTRACTION</strong>
                     <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
                   </div>
 
@@ -557,7 +560,7 @@
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
                     <strong>ROBOTIC CHESS PLAYER</strong>
-                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Robot Operating System (ROS)</em></span>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Robotics</em></span>
                   </div>
 
                 </div>
@@ -588,6 +591,53 @@
               </a>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="atcv_football_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_barcamadrid0.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>A MATTER OF HEIGHT</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_head.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>MONOCULAR 3D HEAD POSE ESTIMATION</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
 
           </div><!-- End Portfolio Container -->
 
