--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="turtlebot_maze_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
@@ -583,7 +583,7 @@
                               border-radius: 15px;" 
                       onmouseover="this.style.opacity='1';" 
                       onmouseout="this.style.opacity='0';">
-                    <strong>TURTLEBOT MAZE</strong>
+                    <strong>TURTLEBOT AUTONOMOUS EXPLORATION</strong>
                     <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Mobile Robotics and Navigation</em></span>
                   </div>
 
@@ -639,6 +639,77 @@
               </a>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
+              <a href="mold_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_mold.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>PLANT MOLD DETECTION</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
+              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_flower.png" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>FLOWERS COUNTING</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em>Computer Vision</em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
+              <a href="turtlebot_maze_file.html" style="text-decoration: none; color: inherit;">
+                <div class="portfolio-content h-100" 
+                    style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
+
+                  <!-- Imagen y superposición -->
+                  <img src="assets/img/portfolio/img_gameoflife.jpg" 
+                      style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
+
+                  <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                              background: rgba(0, 0, 0, 0.7); color: white; 
+                              display: flex; flex-direction: column; align-items: center; justify-content: center; 
+                              opacity: 0; transition: opacity 0.3s ease; font-size: 1.5rem; text-align: center; 
+                              border-radius: 15px;" 
+                      onmouseover="this.style.opacity='1';" 
+                      onmouseout="this.style.opacity='0';">
+                    <strong>GAME OF LIFE</strong>
+                    <span style="font-size: 1rem; font-weight: normal; margin-top: 0.5rem; color: #d0cece;"><em></em></span>
+                  </div>
+
+                </div>
+              </a>
+            </div>
           </div><!-- End Portfolio Container -->
 
 
@@ -699,7 +770,7 @@
 
           <!-- Photo Section -->
           <div class="col-lg-5 d-flex justify-content-start">
-            <img src="assets/img/img_leman.jpg" alt="Marc Arias Mitjà" style="max-width: 80%; border-radius: 0px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
+            <img src="assets/img/img_leman.jpg" alt="Marc Arias Mitjà" style="max-width: 65%; border-radius: 0px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
           </div>
 
         </div>
