--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="email"><i class="bi bi-envelope"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#contact" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="#contact" class="github"><i class="bi bi-github"></i></a>
+      <a href="#contact" class="email"><i class="bi bi-envelope"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -761,6 +760,18 @@
                   <p style="margin: 0;">
                     <a href="https://www.linkedin.com/in/mariasmitja" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
                       Marc Arias Mitjà
+                    </a>
+                  </p>
+                </div>
+              </div><!-- End Info Item -->
+
+              <div class="info-item d-flex align-items-center mb-4" data-aos="fade-up" data-aos-delay="200" style="padding: 5px;">
+                <i class="bi bi-github flex-shrink-0" style="margin-left: 25px; margin-right: 15px;"></i>
+                <div>
+                  <h3 style="margin: 0;">GitHub</h3>
+                  <p style="margin: 0;">
+                    <a href="https://github.com/marcarias" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
+                      @marcarias
                     </a>
                   </p>
                 </div>
