--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <h4 style="color: #000000; font-size: 18px;"><strong>Double Master's Thesis</strong></h4>
               <h5 style="display: inline-block; background-color: #f0f8ff; color: #317ccd; padding: 5px 10px; border-radius: 5px; font-weight: bold; font-size: 14px; border: 1px solid #317ccd;">Feb. 2025 - Present</h5>
               <!--<p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b><br><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>-->
-              <p><b>Intelligent Systems and Algorithms Laboratory (DISAL)</b></p>
+              <p><b>Distributed Intelligent Systems and Algorithms Laboratory (DISAL)</b></p>
               <p style="margin: -3px; margin-left: 1px; color: #555555"><em>École Polytechnique Fédérale de Lausanne (EPFL), Lausanne (Switzerland)</em></p>
               <ul style="color: #555555; list-style-type: disc; padding-left: 25px; font-size: 14px; line-height: 1.6; margin: 12px">
                 <li>
@@ -597,7 +597,7 @@
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
                   <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_barcamadrid0.png" 
+                  <img src="assets/img/portfolio/img_barcamadrid21.png" 
                       style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
@@ -645,7 +645,7 @@
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
                   <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_mold.png" 
+                  <img src="assets/img/portfolio/img_mold_e.png" 
                       style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
@@ -669,7 +669,7 @@
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
                   <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_flower.png" 
+                  <img src="assets/img/portfolio/img_flower_e.png" 
                       style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
