--- a/index.html
+++ b/index.html
@@ -544,12 +544,12 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-university">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="roboticchess_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
                   <!-- Imagen y superposición -->
-                  <img src="assets/img/portfolio/img_chess.jpeg" 
+                  <img src="assets/img/portfolio/img_chess3.png" 
                       style="width: 100%; height: auto; display: block; border-radius: 15px;" alt="">
 
                   <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
@@ -664,7 +664,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-all filter-personal">
-              <a href="engihack_2024.html" style="text-decoration: none; color: inherit;">
+              <a href="flowers_file.html" style="text-decoration: none; color: inherit;">
                 <div class="portfolio-content h-100" 
                     style="position: relative; display: inline-block; overflow: hidden; border-radius: 15px;">
 
