--- a/mold_file.html
+++ b/mold_file.html
@@ -127,24 +127,15 @@
                     <h2><strong>Advancing Plant Health Monitoring: Instance Segmentation for Mold Detection</strong></h2>
 
                     <!-- Agregar una imagen debajo del texto -->
-                    <img src="assets/img/portfolio/img_mold1.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
-                    <p style="margin-top: 10px;">
+                    <img src="assets/img/portfolio/logoa.jpg" alt="Descripción de la imagen" style="margin-top: 0px; width: 20%; height: auto; border-radius: 0px; position: relative; left: 310px;">
+                    <video autoplay muted loop
+                          style="width: 100%; height: auto; clip-path: inset(0 100px 0 0);">
+                      <source src="assets/vid/vid_mold_detection.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video><p style="margin-top: 10px;">
                         Detecting mold in microgreens just got smarter with the use of <b>AI Computer Vision methods</b>, concretely <b>Instance Segmentation techniques</b>. This advanced approach identifies and highlights mold-affected areas directly within an image, enabling precise monitoring and more effective intervention. By isolating these affected regions, growers can address issues promptly, ensuring healthier and more productive crops.
-                    </p>
-                    <p style="margin-top: 0px;">
-                        <b>UNet3</b> architecture was used, a deep learning model tailored for pixel-level segmentation. Its architecture, featuring an encoder to extract spatial features and a decoder to reconstruct detailed masks, is optimized for accuracy. The inclusion of skip connections ensures that essential spatial details are preserved, making it particularly suitable for smaller datasets, such as the one utilized in this project.
-                    </p>
-                    <img src="assets/img/portfolio/img_mold2.png" alt="Descripción de la imagen" style="margin-top: 0px; width: 70%; height: auto; border-radius: 0px; position: relative; left: 75px;">     
-                    <p style="margin-top: 30px;">
-                        The process began with a <b>dataset of 300 images</b>, each carefully annotated to map out mold-affected areas. To further enhance the model’s learning capabilities, <b>data augmentation techniques</b> were applied, introducing variations in lighting, angles, and scales. This expanded the dataset to <b>1,000 images</b>, providing a diverse training set that improved the model’s robustness.
-                    </p>
-                    <p style="margin-top: 0px;">
-                        When deployed, the trained model delivered high-precision results, generating <b>detailed masks that accurately pinpoint mold-affected areas</b>. This approach not only reduces the reliance on time-consuming manual inspections but also offers scalability for larger operations. Integrating such systems with automation or IoT devices holds significant potential for revolutionizing mold detection and enhancing agricultural productivity.
-                    </p>
-                    <video controls muted style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
-                        <source src="assets/vid/vid_mold_detection.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>   
+                    </p>    
+
                     <p style="margin-top: 30px;">
                         <b style="color: red;">*The source code for this project cannot be shared due to confidentiality with the company involved.</b>
                     </p>
