--- a/turtlebot_maze_file.html
+++ b/turtlebot_maze_file.html
@@ -127,7 +127,7 @@
                     <h2><strong>Autonomous Exploration in Robotics Using ROS</strong></h2>
 
                     <!-- Agregar una imagen debajo del texto -->
-                    <img src="assets/img/portfolio/img_turtlebot1.png" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
+                    <img src="assets/img/portfolio/igm_turtlebot2.jpg" alt="Descripción de la imagen" style="margin-top: 15px; max-width: 100%; height: auto; border-radius: 10px;">
                     <p style="margin-top: 10px;">
                         This project explores <b>frontier-based exploration strategies</b> for mobile robots using ROS. The goal is to <b>improve decision-making in goal selection and replan strategies</b> while focusing on exploration challenges rather than navigation issues.   
                     </p>
@@ -156,7 +156,7 @@
                     <p style="margin-top: 30px;">
                         <b>Simulations</b> were carried out by means of <b>ROS</b> and <b>Gazebo</b> simulator.
                     </p> 
-                  <video controls muted style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
+                  <video autoplay muted loop style="margin-top: 0px; width: 100%; height: auto; border-radius: 0px; position: relative; left: 0px;">
                       <source src="assets/vid/vid_mrn_sim.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                   </video>                       
@@ -185,7 +185,7 @@
                   <p style="margin-top: 30px;">
                       Finally, the robot was tested in a <b>real scenario</b> during a class competition. Our robot completed the maze exploration using <b>20.46 meters</b>, achieving a more efficient performance compared to other teams, whose robots required 22.32 meters, 28.61 meters, 21.85 meters, and 28.47 meters, respectively. 
                   </p>
-                  <video controls muted style="margin-top: 0px; width: 35%; height: auto; border-radius: 0px; position: relative; left: 200px;">
+                  <video autoplay muted loop style="margin-top: 0px; width: 35%; height: auto; border-radius: 0px; position: relative; left: 200px;">
                       <source src="assets/vid/vid_mrn_lab.MOV" type="video/mp4">
                       Your browser does not support the video tag.
                   </video>
